<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cat_train"
        android:icon="@drawable/a_dummy_icon"
        android:title="@string/label_train"/>

    <item
        android:id="@+id/cat_flight"
        android:icon="@drawable/a_dummy_icon"
        android:title="@string/label_flight"/>

    <item
        android:id="@+id/cat_hotel"
        android:icon="@drawable/a_dummy_icon"
        android:title="@string/label_hotel"/>

    <item
        android:id="@+id/cat_railink"
        android:icon="@drawable/a_dummy_icon"
        android:title="@string/label_railink"/>

    <item
        android:id="@+id/cat_bus"
        android:icon="@drawable/a_dummy_icon"
        android:title="@string/title_5"/>

    <item
        android:id="@+id/cat_bill"
        android:icon="@drawable/a_dummy_icon"
        android:title="@string/label_bill"/>

</menu>
